added a white border around the (APOD) image so that darker images would be easier to see

--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -37,6 +37,7 @@
     /* Internet Explorer/Edge */
     user-select: none;
     object-fit: cover;
+    border: 1px solid white;
 }
 
 .mainImgInfoWrapper {
